// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render badge correctly 1`] = `
<div class="van-badge van-badge--top-right van-badge--fixed">
  1
</div>
`;

exports[`should render default slot correctly 1`] = `
"<i class="van-badge__wrapper van-icon van-icon-success">Default Slot
  <!---->
  <!---->
</i>"
`;

exports[`should render dot correctly 1`] = `
<div class="van-badge van-badge--top-right van-badge--dot van-badge--fixed">
</div>
`;

exports[`should render icon with builtin icon name correctly 1`] = `
"<i class="van-badge__wrapper van-icon van-icon-success">
  <!---->
  <!---->
  <!---->
</i>"
`;

exports[`should render icon with local image correctly 1`] = `
"<i class="van-badge__wrapper van-icon">
  <!----><img class="van-icon__image" src="/assets/icon.jpg">
  <!---->
</i>"
`;

exports[`should render icon with url name correctly 1`] = `
"<i class="van-badge__wrapper van-icon">
  <!----><img class="van-icon__image" src="https://fastly.jsdelivr.net/npm/@vant/assets/cat.jpeg">
  <!---->
</i>"
`;
